--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 </form>
 
 <div ng-repeat="x in all.component">
-   <div ng-if="x.presentation==='piechart'">
+  <div ng-repeat="y in x.visuals">
+   <div ng-if="y.presentation==='piechart'">
         <hc-pie-chart title={{x.title}} data="piechart">Days in field - pie chart</hc-pie-chart>
    </div>
-   <div ng-if="x.presentation=='barchart'">
+   <div ng-if="y.presentation=='barchart'">
        <hc-bar-chart title={{x.title}} data="barchart">Days in field - bar data</hc-bar-chart>
    </div>
-   <div ng-if="x.presentation=='graph'">
+   <div ng-if="y.presentation=='graph'">
      <hc-chart options="chartOptions">Placeholder for generic chart</hc-chart>
    </div>
 </div>
