--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 <div ng-repeat="x in all.component">
   <div ng-repeat="y in x.visuals">
    <div ng-if="y.presentation==='piechart'">
-        <hc-pie-chart title={{x.title}} data="piechart">Days in field - pie chart</hc-pie-chart>
+        <hc-pie-chart title={{y.title}} data="piechart">Days in field - pie chart</hc-pie-chart>
    </div>
    <div ng-if="y.presentation=='barchart'">
-       <hc-bar-chart title={{x.title}} data="barchart">Days in field - bar data</hc-bar-chart>
+       <hc-bar-chart title={{y.title}} data="barchart">Days in field - bar data</hc-bar-chart>
    </div>
    <div ng-if="y.presentation=='graph'">
      <hc-chart options="chartOptions">Placeholder for generic chart</hc-chart>
    </div>
+</div>
 </div>
 
 
