--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 </form>
 
 <div ng-repeat="x in all.component">
+
   <div ng-repeat="y in x.visuals">
+
    <div ng-if="y.presentation==='piechart'">
-        <hc-pie-chart title={{y.title}} data="piechart">Days in field - pie chart</hc-pie-chart>
+        <hc-pie-chart title={{y.title}} data="piechart[$parent.$parent.$index][$index]">Days in field - pie chart</hc-pie-chart>
    </div>
-   <div ng-if="y.presentation=='barchart'">
-       <hc-bar-chart title={{y.title}} data="barchart">Days in field - bar data</hc-bar-chart>
+   <div ng-if="y.presentation==='barchart'">
+       <hc-bar-chart data="barchart[$parent.$parent.$index][$index]" title={{y.title}} >Days in field - bar data</hc-bar-chart>
    </div>
-   <div ng-if="y.presentation=='graph'">
+   <div ng-if="y.presentation==='graph'">
      <hc-chart options="chartOptions">Placeholder for generic chart</hc-chart>
    </div>
 </div>
