--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <button ng-click="submit()">Submit</button>
 </form>
 
-<div ng-repeat="x in conf.component">
+<div ng-repeat="x in config.component">
 
   <div ng-repeat="y in x.visuals">
 
